--- a/Student Management System/ClassLibrary/ClassLibrary.csproj
+++ b/Student Management System/ClassLibrary/ClassLibrary.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
