--- a/Student Management System/Student Management System/Student Management System.csproj
+++ b/Student Management System/Student Management System/Student Management System.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Student_Management_System</RootNamespace>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
